kubedump/dowload/kubedump-kubedb-gcs-repository-kckup-frequent-backup-1745841000/manifest/kubestash-tmp/manifest/mutatingwebhookconfigurations.admissionregistration.k8s.io/cluster/mutators.schema.kubedb.com.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubedb
    meta.helm.sh/release-namespace: kubedb
  creationTimestamp: "2025-04-28T11:28:31Z"
  generation: 1
  labels:
    app.kubernetes.io/component: kubedb-schema-manager
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/version: v0.29.1
    helm.sh/chart: kubedb-webhook-server-v0.29.0
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:meta.helm.sh/release-name: {}
          f:meta.helm.sh/release-namespace: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:webhooks:
        .: {}
        k:{"name":"mariadbdatabasewebhook.mutators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mongodbdatabasewebhook.mutators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"mysqldatabasewebhook.mutators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"postgresdatabasewebhook.mutators.schema.kubedb.com"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:caBundle: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:reinvocationPolicy: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: helm
    operation: Update
    time: "2025-04-28T11:28:31Z"
  name: mutators.schema.kubedb.com
  resourceVersion: "59397"
  uid: 83aae620-e198-4d99-b940-0f3c81c679d4
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-schema-kubedb-com-v1alpha1-mariadbdatabase
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mariadbdatabasewebhook.mutators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - mariadbdatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-schema-kubedb-com-v1alpha1-mongodbdatabase
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mongodbdatabasewebhook.mutators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - mongodbdatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-schema-kubedb-com-v1alpha1-mysqldatabase
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mysqldatabasewebhook.mutators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - mysqldatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRUC9EMzRpUkhFL3JvUnlGVC9zUVF0VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qZ3hNVEkzTWpWYUZ3MHpOVEEwTWpZeE1USTNNalZhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFwSW90CkJ2NTV1QTF2R0pwUHBQeVBVRTBjVFhKV3orakNRZ2QzaFlITmxVUVZUVC9pNmd4aDE3Rkg4RStkdGE2SlpFNnoKNFVsamhHVkFlODZMNXl0cUFGMk0yRHNWQVJpKzVVRjR3c3c3WGtPZ3RGdmlKSXFRK0pGVjMyKzU1UFJjVjJJKwpBb3FBb2hSZGFEc1 [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-schema-kubedb-com-v1alpha1-postgresdatabase
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: postgresdatabasewebhook.mutators.schema.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - schema.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - postgresdatabases
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
